@@ -1,0 +1,7 @@
+﻿namespace MvcBoilerplate.Settings
+{
+    public class SitemapSettings
+    {
+        public string[] SitemapPingLocations { get; set; }
+    }
+}
