@@ -19,6 +19,17 @@ appSettings configuration section contained in the web.config file in ASP.NET 4.
             <li>InstrumentationKey - The instrumentation key for Application Insights retrieved from Azure.</li>
         </ul>
     </li>
+    <!-- $Start-Sitemap$ --> 
+    <li>
+        SitemapSettings - Stores sitemap related settings.
+        <ul>
+            <li>
+                SitemapPingLocations - An array of URL's where the sitemap can be pinged to. Note that Yahoo uses the
+                same sitemap ping location as Bing.
+            </li>
+        </ul>
+    </li>
+    <!-- $End-Sitemap$ --> 
     <!-- $End-ApplicationInsights$ -->
     <li>
         CacheProfileSettings - Stores the cache profile settings for all cached actions in the application. Note that
